# bystander-edit-safety

./: .gitignore  README.md  pyproject.toml  requirements-external.txt
docs/: example-run.md  pipeline.md  setup.md  step0-coordinates.md
src/base_edit_safety/: __init__.py  annotation.py  config.py  design_record.py  evidence.py  hbg_registry.py  offtarget_taxonomy.py  paralog_hazard.py
src/base_edit_safety/adapters/: __init__.py  _bedict_runner.py  bedict.py  consequence.py  crispor.py
src/base_edit_safety/io/: __init__.py  bystander_view.py  outputs.py  reference.py  step0_anchor.py
src/base_edit_safety/pipeline/: __init__.py  annotate_consequence.py  design_records.py  enumerate_guides.py  environment.py  model.py  rank_designs.py  spine.py
src/base_edit_safety/scoring/: __init__.py  credibility.py  rubric.py
tests/: test_bedict_integration.py  test_ch_annotation.py  test_credibility.py  test_crispor_mapping.py  test_design_records.py  test_no_risk_field.py  test_parser_fixtures.py  test_reproducibility.py  test_rubric.py  test_spectrum_mapping.py  test_step0_invariant.py  test_step0_loader.py  test_step2_integration.py
tests/fixtures/: README.md  bedict_response_HBG1_m113_ABE.json  crispor_guides.tsv  crispor_offtargets.tsv
