[project]
name = "base-edit-safety"
version = "0.0.0"
description = "HBG1/HBG2 base-editing design-history and validation-planning records for fetal-hemoglobin research."
requires-python = ">=3.10"
dependencies = []   # external prediction tools are installed separately (see adapters/)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires an external prediction tool to be installed and configured",
]
